--- a/src/css/services.css
+++ b/src/css/services.css
@@ -3,7 +3,7 @@
   /* Create three equal columns that floats next to each other */
   .column {
     float: left;
-    width: 33.33%;
+    width: 25%;
     padding: 10px;
     height: 300px; /* Should be removed. Only for demonstration */
   }
@@ -18,7 +18,10 @@
   @media screen and (max-width: 600px) {
     .column {
       width: 100%;
+      padding: 10px;
+      height: 300px; /* Should be removed. Only for demonstration */
     }
+ 
   }
 
   .iconed-box-content{
@@ -36,4 +39,9 @@ margin-top: 10px;
 font-family: inherit;
 font-weight: 700;
 line-height: 1.1;
+}
+
+.containerr{
+    padding-left: 0;
+    padding-right: 0;
 }
