--- a/src/css/header.css
+++ b/src/css/header.css
@@ -16,11 +16,14 @@
 .nav-link{
     font-weight: 600 !important
 }
+
 .nav-font{
-  font-family: Modern-Sans-Light;
-  font-size: 16px;
-    font-weight: 600 !important
+  margin-right: 20px;
+  font-family: Lato;
+  font-size: 20px;
+    font-weight: 500 !important
 }
+
 .nav-font:hover{
   color: #FF7D00;
 }
